# random

./: .gitignore  README.md  holographic-story-builder-prompt.md  neural-style-transfer-prompt.md
agent-library-wrapper/: .env.example  README.md  pyproject.toml  requirements.txt
agent-library-wrapper/memory_agents/: __init__.py  agent.py  async_agent.py  client.py  config.py  models.py
agent-library-wrapper/tests/: test_agent.py  test_async_agent.py  test_client_config.py  test_memory_store.py  test_structured_output.py
ai-courtroom-cli/: README.md  pyproject.toml  run.py
ai-courtroom-cli/ai_courtroom_cli/: __init__.py  cli.py  examples.py  exporters.py  formatters.py  formatting.py  mock_agents.py  models.py  orchestrator.py  providers.py  storage.py  templates.py
ai-courtroom-cli/ai_courtroom_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ai-courtroom-cli/examples/: used-rtx-3090.json
ai-courtroom-cli/exports/: case-1-buy-2-used-rtx-3090-gpus-now-or-wait.md  case-2-should-i-buy-2-used-rtx-3090-gpus-now,-or-should-i-wait.md  case-3-why-people-sleep-at-night.md
ai-courtroom-cli/tests/: test_trial_engine.py
ctrl-fabric/: .env.example  README.md  pyproject.toml  render.yaml
ctrl-fabric/ctrl_fabric/: __init__.py  __main__.py  main.py  opencode_client.py
ctrl-fabric/ctrl_fabric.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ctrl-fabric/examples/: all_agents_demo.py  analytics_demo.py  docs_demo.py  opencode_demo.py  pattern_demo.py  qa_sustainability_demo.py
ctrl-fabric/tests/: test_agents.py
ctrl-fabric/web/: Dockerfile  app.py  requirements.txt
dynasty-sim/: .env.example  README.md  pyproject.toml  report.html
dynasty-sim/dynasty_sim/: __init__.py  cli.py  client.py  engine.py  generator.py  html_export.py  inheritance.py  memory.py  models.py  persistence.py  relationships.py  reporter.py  seeds.py
dynasty-sim/dynasty_sim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dynasty-sim/saves/: dynasty_sim_1200-1205_20260505_102529.json  dynasty_sim_1200-1250_20260505_102912.json  dynasty_sim_1200-1250_20260505_104405.json  dynasty_sim_1200-1250_20260505_110317.json  dynasty_sim_1200-1250_20260505_110359.json  dynasty_sim_1200-1250_20260505_110435.json
dynasty-sim/tests/: test_engine.py  test_inheritance.py  test_relationships.py
ecosystem-evolution-simulator/: .gitignore  README.md  pyproject.toml
ecosystem-evolution-simulator/ecosystem_simulator/: __init__.py  __main__.py  main.py
graveyard-chorus/: .env.example  .gitignore  README.md  pyproject.toml
graveyard-chorus/graveyard_chorus/: __init__.py  book.py  cli.py  client.py  config.py  engine.py  exporters.py  memory.py  models.py  persistence.py  pwa.py  seeds.py
graveyard-chorus/graveyard_chorus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
graveyard-chorus/tests/: test_book.py  test_cli.py  test_client.py  test_config.py  test_exporters.py  test_memory.py  test_simulation.py
hermes/: .env.example  .gitignore  AGENTS.md  README.md  SOUL.md  classifica_libri.txt  fumetto-4-scene.html  fumetto-pazza.html  i_fratelli_del_ricordo.md  il_bambino_che_vide_troppo.md  il_cristallo_e_il_fango.md  il_cristallo_e_la_bambina.md  il_doppio_quarto.md  il_fratello_che_non_perdono.md  il_gioco_dei_sassi.md  il_gioco_della_distruzione.md  il_giudice_che_non_capi.md  il_giudice_che_non_era.md  il_giudice_e_il_bambino.md  il_libro_incompleto_d_amore.md  il_nome_e_il_freddo.md  il_padre_dei_figli_assenti.md  il_padre_giocatore.md  il_padre_senza_nome.md  il_palazzo_del_nulla.md  il_passato_e_i_morti.md  il_professore_di_nulla.md  il_quarto_angolo.md  il_silenzio_del_nulla.md  il_silenzio_delle_cose_rotte.md  il_tram_all_indietro.md  il_tram_e_i_muri.md  il_vecchio_che_insegnava_a_morire.md  l-ultima-biblioteca.html  l_angolo_della_memoria.md  l_ultima_cena.md  l_ultima_cena_d_amore.md  l_ultima_confessione.md  l_ultima_lettera_d_amore.md  l_ultima_partita_a_scacchi.md  (+34 more)
hermes/config/: secrets.example.yaml  system.yaml
hermes/hermes_triad_workspace.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
hermes/hermes_workspace/: __init__.py  cli.py  orchestrator.py  shell.py  store.py  tui.py
hermes/prompts/: architetto.md  docente.md  dostoevskij.md  economista.md  giurista.md  revisore.md  ricercatore.md  statistico.md  storico.md  sviluppatore.md
hermes/skills/: catalog.yaml
hermes/tests/: test_workspace.py
holographic-story-builder/: README.md  main.py  pyproject.toml  requirements.txt
holographic-story-builder/holographic_story_builder/: __main__.py  main.py
holographic-story-builder/holographic_story_builder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
holographic-story-builder/src/: __init__.py
holographic-story-builder/stories/: demo_story.json
interview-coach/: .env.example  README.md  pyproject.toml
interview-coach/interview_coach/: __init__.py  cli.py  models.py  prompts.py  session.py
interview-coach/interview_coach.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
italian-startup-simulator/: .env.example  README.md  pyproject.toml
italian-startup-simulator/app/: __init__.py  config.py  db.py  main.py  schemas.py
italian-startup-simulator/data/: italian_startup_simulator.db  seed_scenario.json
italian-startup-simulator/tests/: test_simulation.py
lingua-evolver/: .env.example  README.md  pyproject.toml
lingua-evolver/lingua_evolver/: __init__.py  __main__.py  cli.py  (+11 more)
lingua-evolver/lingua_evolver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
photoshop-clone/: .gitignore  CMakeLists.txt  README.md  build-mac.sh  build-windows.ps1
polarfire-vp/: README.md  pyproject.toml
quantum-circuit-simulator/: README.md  pyproject.toml
rave/: README.md  pyproject.toml  requirements.txt
sims-ai-city/: .env.example  README.md  pyproject.toml  requirements.txt
trend-meme-factory/: README.md  pyproject.toml  run_daily.sh
vertest/: pyproject.toml
(+2870 files in other folders)
