[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "memory-agents"
version = "0.1.0"
description = "Memory-enabled AI agents for OpenRouter with first-class free-model support."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" }
]
keywords = [
  "agents",
  "openrouter",
  "memory",
  "llm",
  "structured-output",
  "free-models"
]
dependencies = [
  "httpx>=0.27.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "pytest-mock>=3.14.0,<4.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["memory_agents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
