[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-courtroom-cli"
version = "0.1.0"
description = "Terminal-only AI Courtroom MVP with modular mock agents and local storage."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "GitHub Copilot" }
]
keywords = ["cli", "decision-support", "agents", "courtroom", "python"]
dependencies = []

[project.scripts]
ai-courtroom = "ai_courtroom_cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_courtroom_cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
