[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctrl-fabric"
version = "1.0.0"
description = "AI-driven fashion company operating like a software organization"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ctrl+Fabric Team"}
]
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ctrl_fabric*"]