[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dynasty-sim"
version = "0.1.0"
description = "A generational family and dynasty simulator powered by OpenRouter free models."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["simulation", "agents", "openrouter", "dynasty", "family-tree", "llm"]
dependencies = [
  "httpx>=0.27.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "rich>=13.0.0,<14.0.0",
  "typer>=0.12.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "pytest-mock>=3.14.0,<4.0.0",
]

[project.scripts]
dynasty-sim = "dynasty_sim.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["dynasty_sim*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
