[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecosystem-evolution-simulator"
version = "1.0.0"
description = "Real-time ecosystem simulator with evolving species, population graphs, and genetic lineage trees"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "GitHub Copilot"}
]
dependencies = [
    "PyQt6>=6.7.0",
    "PyQt6-Qt6>=6.7.0",
    "PyQt6-sip>=13.6.0",
    "PyQt6-Charts>=6.7.0",
    "networkx>=3.2",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "simpy>=4.1",
    "scipy>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "mypy>=1.8",
]

[project.scripts]
ecosystem-sim = "ecosystem_simulator.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ecosystem_simulator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]