[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "graveyard-chorus"
version = "0.1.0"
description = "Agentic small-town literary simulation that generates linked epitaph anthologies."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["simulation", "agents", "openrouter", "poetry", "narrative", "epitaph"]
dependencies = [
  "httpx>=0.27.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "rich>=13.7.0,<14.0.0",
  "typer>=0.12.3,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
]

[project.scripts]
graveyard-chorus = "graveyard_chorus.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["graveyard_chorus*"]

[tool.setuptools.package-data]
graveyard_chorus = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]