[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-triad-workspace"
version = "0.1.0"
description = "Local Hermes multi-agent workspace with live-editable agent configs, shared memory, and parallel dispatch."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "GitHub Copilot" }
]
dependencies = [
  "PyYAML>=6.0",
  "typer>=0.12",
  "rich>=13.0"
]

[project.scripts]
hermes-workspace = "hermes_workspace.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hermes_workspace*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]