[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "interview-coach"
version = "0.1.0"
description = "AI-powered interview coach backed by OpenRouter free models."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["interview", "coach", "openrouter", "agents", "llm"]
dependencies = [
  "memory-agents",
  "rich>=13.0.0,<14.0.0",
]

[project.scripts]
interview-coach = "interview_coach.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["interview_coach*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
