[project]
name = "italian-startup-simulator"
version = "0.1.0"
description = "Local-first AI agent startup simulation for the Italian market"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "jinja2>=3.1.4,<4.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "httpx>=0.28.0,<1.0.0",
    "python-multipart>=0.0.18,<1.0.0",
    "pydantic>=2.9.0,<3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
