[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "lingua-evolver"
version = "0.1.0"
description = "Artificial language evolution simulator with AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12,<1.0",
    "rich>=13,<14",
    "pydantic>=2,<3",
    "httpx>=0.27,<1.0",
    "python-dotenv>=1,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
]

[project.scripts]
lingua-evolver = "lingua_evolver.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["lingua_evolver*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
