[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "polarfire-vp"
version = "0.1.0"
description = "Functional virtual platform for PolarFire SoC firmware bring-up and debug."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "GitHub Copilot" }
]
dependencies = [
  "pyelftools>=0.31,<1.0.0",
  "PyYAML>=6.0.1,<7.0.0",
  "rich>=13.7.0,<14.0.0",
  "typer>=0.12.3,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
]

[project.scripts]
pfvp = "polarfire_vp.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["polarfire_vp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
