[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-circuit-simulator"
version = "1.0.0"
description = "Visual quantum circuit simulator with drag-and-drop gates and real-time animations"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "GitHub Copilot"}
]
dependencies = [
    "pygame>=2.5.0",
    "qiskit>=1.0.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "mypy>=1.8",
]

[project.scripts]
quantum-sim = "quantum_simulator.ui.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["quantum_simulator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]