[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rave"
version = "1.0.0"
description = "Real-Time Artistic Vision Engine"
requires-python = ">=3.9"
dependencies = [
    "opencv-python>=4.9.0",
    "onnxruntime>=1.17.0",
    "torch>=2.2.0",
    "numpy>=1.26.0",
    "customtkinter>=5.2.0",
    "Pillow>=10.2.0",
]

[project.scripts]
rave = "rave.main:main"