[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "sims-ai-city"
version = "0.1.0"
description = "A playful emergent life simulation built on top of memory_agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "OpenAI Codex" }]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn>=0.34.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0"
]

[project.scripts]
sims-ai-city = "sims_ai_city.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["sims_ai_city"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
