[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vertest"
version = "0.1.0"
description = "VectorCAST-inspired unit testing platform for C/C++"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "jinja2>=3.0",
    "sqlalchemy>=2.0",
    "pyyaml>=6.0",
    "tree-sitter>=0.25",
    "tree-sitter-c>=0.24",
    "tree-sitter-cpp>=0.21",
]

[project.scripts]
vertest = "vertest.main:cli"

[tool.setuptools.packages.find]
include = ["vertest*"]

[tool.setuptools.package-data]
"vertest" = ["harness/templates/*.j2"]
